# api-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  MANUAL_TESTING.md  OAUTH_README.md  README.md  main.py  pyproject.toml
migrations/: alembic.ini  env.py
migrations/versions/: add_transactions_and_oauth.py  add_user_roles.py  initial_migration.py
src/: __init__.py  config.py
src/api/v1/: __init__.py  auth.py  product.py  transaction.py  user.py
src/middleware/: __init__.py  compression.py  error_handler.py  request_logger.py  security.py
src/models/: product.py  transaction.py  user.py
src/utils/: auth.py  oauth.py  supabase.py
tests/: conftest.py  test_api.py  test_product_api.py  test_product_model.py  test_supabase.py  test_user_api.py  test_user_model.py
